--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,10 +6,11 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #fafafa;
+    background-color: white;
     color: #212121;
     line-height: 1.5;
-
+    margin: 0;
+    padding: 100px 0;
 }
 
 #search-box {
@@ -17,6 +18,19 @@ body{
     padding: 8px;
     max-width: 320px;
     margin-bottom: 16px;
+}
+
+#search-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    padding: 20px 0;
+    background-color: #dbe1e6d0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
 }
 
 p {
@@ -36,8 +50,8 @@ img {
     height: 180px;
    
 }
+
 .gallery {
-    
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -45,7 +59,52 @@ img {
     gap: 20px;
     margin-top: 15px;
 }
-// .photo-card{
-//     margin: 20px;
-// }
-    
+
+.photo-card {
+    background-color: #dbe1e665;
+    text-align: center;
+    border-radius: 15px;
+    padding: 20px 10px;
+}
+
+.disabled {
+    display: none;
+}
+
+.btn {
+    cursor: pointer;
+    outline: 0;
+    padding: 15px 40px;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 15px;
+    background-color: #008BF8;
+    border-color: #008BF8;
+    border-style: solid;
+    color: white;
+    transition: 0.3s;
+}
+
+.btn:hover {
+    background-color: #41a8f6;
+    border-color: #41a8f6;
+    color: white;
+}
+
+.load-more {
+    margin: 0 auto;
+    margin-top: 50px;
+    display: block;
+}
+
+.input {
+    border-radius: 15px;
+    padding: 15px 40px;
+    border: solid;
+    outline: 0;
+}
+
+.info a {
+    text-decoration: none;
+    color: black;
+}
